# Scanner

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  demo-report.css  demo.js  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  config.py  database.py  main.py
app/agents/: __init__.py  cve_researcher.py  graph.py  llm.py  report_generator.py  severity_assessor.py  state.py  static_analyzer.py  vulnerability_detector.py
app/api/: cve.py  scans.py
app/models/: __init__.py  cve.py  scan.py  vulnerability.py
app/rag/: cve_loader.py  embeddings.py  vectorstore.py
app/schemas/: __init__.py  scan.py  vulnerability.py
app/services/: github.py  scanner.py
app/static/: demo.html  demo.js  index.html  styles.css
app/utils/: logger.py
data/: cve_seed.json
deploy/aws/: README.md  task-definition.json
examples/: scan_request.json  vulnerable_app.py
examples/vulnerable_api/: auth_middleware.py  config.py  payment_controller.py  requirements.txt
scripts/: run_local.py  scan_local.py
tests/: conftest.py  test_api.py  test_graph.py  test_static_analyzer.py
