[project]
name = "code-security-scanner"
version = "0.1.0"
description = "Multi-agent AI scanner that finds security issues in pull requests."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Saloni" }]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
